--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 </head>
 
 <body>
+    <div class="container">
+        
+    </div>
 
 
-    <script>
-        // You can also require other files to run in this process
-        require('../counterStrokejs')
-    </script>
+    <script src="counterStroke.js"></script>
 </body>
 
 </html>
